# lab6s2

./: CMakeLists.txt  event.h  eventdialog.cpp  eventdialog.h  main.cpp  mainwindow.cpp  mainwindow.h
